--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Apr 11 17:17:22 IRKT 2018
-sdk.dir=C\:\\Users\\Geralt\\AppData\\Local\\Android\\Sdk
+#Wed Apr 11 18:29:22 IRKT 2018
+sdk.dir=C\:\\Users\\vshir\\AppData\\Local\\Android\\Sdk
